--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "@angular/language-service": "~8.2.14",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "3.1.2",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
+    "angular2-template-loader": "^0.6.2",
     "codelyzer": "^5.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -55,15 +56,22 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "html-loader": "^1.0.0",
+    "jasmine": "^3.5.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "null-loader": "^3.0.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
+    "ts-loader": "^6.2.2",
+    "ts-node": "^7.0.1",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
